2015-10-23  Natalia Portillo  <claunia@claunia.com>

	* Enums.cs:
	  Correct typo and add missing SASI commands.

2015-10-23  Natalia Portillo  <claunia@claunia.com>

	* Enums.cs:
	  Typo

2015-10-23  Natalia Portillo  <claunia@claunia.com>

	* Enums.cs:
	  Added information from ECMA-111.

2015-10-19  Natalia Portillo  <claunia@claunia.com>

	* Device/Variables.cs:
	  Make some variables readonly so they cannot be modified
	  after construction.

2015-10-19  Natalia Portillo  <claunia@claunia.com>

	* Device/Variables.cs:
	* Device/Constructor.cs:
	  Having a globally accessed static SCSI Peripheral Device
	  Type allows easier command filtering.

2015-10-19  Natalia Portillo  <claunia@claunia.com>

	* Device/Constructor.cs:
	* DiscImageChef.Devices.csproj:
	  Device type, manufacturer, model, revision and serial number
	  are now obtained in device constructor.

2015-10-19  Natalia Portillo  <claunia@claunia.com>

	* DiscImageChef.Devices.csproj:
	  Upgrade .NET version to 4.0.

2015-10-19  Natalia Portillo  <claunia@claunia.com>

	* Enums.cs:
	* Device/Variables.cs:
	* Device/Constructor.cs:
	  Added some device static values to variables.

2015-10-19  Natalia Portillo  <claunia@claunia.com>

	* Enums.cs:
	* Structs.cs:
	* Command.cs:
	* Linux/Command.cs:
	* Device/Commands.cs:
	* Device/AtaCommands.cs:
	* Device/ScsiCommands.cs:
	* Device/AtapiCommands.cs:
	  Moved devices enums and structs out of classes.

2015-10-19  Natalia Portillo  <claunia@claunia.com>

	* Device/ScsiCommands.cs:
	  Implemented SCSI VPDs 0x00 to 0x80.

2015-10-18  Natalia Portillo  <claunia@claunia.com>

	* Device/AtaCommands.cs:
	* Device/ScsiCommands.cs:
	* Device/AtapiCommands.cs:
	* DiscImageChef.Devices.csproj:
	  Added specific console handling for standard, verbose, debug
	  and error outputs.

2015-10-17  Natalia Portillo  <claunia@claunia.com>

	* Enums.cs:
	  Added information from T10/536 rev. 4a (ZBC)

2015-10-17  Natalia Portillo  <claunia@claunia.com>
