@@ -1,6 +1,12 @@
 2015-10-23  Natalia Portillo  <claunia@claunia.com>
 
 	* Enums.cs:
+	  SCSI commands that are IDENTICAL on SASI are now aliased for
+	  source code readability.
+
+2015-10-23  Natalia Portillo  <claunia@claunia.com>
+
+	* Enums.cs:
 	  Correct typo and add missing SASI commands.
 
 2015-10-23  Natalia Portillo  <claunia@claunia.com>
